--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
     "consolify": "^1.0.0",
+    "exorcist": "^0.1.6",
     "glob": "^4.0.6",
     "gulp": "^3.8.10",
+    "gulp-coffeelint": "^0.4.0",
     "gulp-load-plugins": "^0.7.1",
+    "gulp-notify": "^2.0.1",
+    "gulp-plumber": "^0.6.6",
+    "minifyify": "^4.4.0",
     "mocaccino": "^1.2.0",
     "mocha": "^2.0.1",
     "phantomic": "^1.0.1",
@@ -23,6 +28,7 @@
     "resolve": "^1.0.0",
     "subarg": "^1.0.0",
     "through2": "^0.6.3",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
   }
